# AdventOfCode2020

./: CMakeLists.txt
day1/: day1_1.cpp  day1_2.cpp
day2/: day2_1.cpp  day2_2.cpp
day3/: day3_1.cpp  day3_2.cpp
src/day1/: day1_1.cpp  day1_2.cpp
src/day10/: day10_1.cpp  day10_2.cpp
src/day11/: day11_1.cpp  day11_2.cpp
src/day12/: day12_1.cpp  day12_2.cpp
src/day2/: day2_1.cpp  day2_2.cpp
src/day3/: day3_1.cpp  day3_2.cpp
src/day4/: day4_1.cpp  day4_2.cpp
src/day5/: day5_1.cpp  day5_2.cpp
src/day6/: day6_1.cpp  day6_2.cpp
src/day7/: day7_1.cpp  day7_2.cpp
src/day8/: day8_1.cpp  day8_2.cpp
src/day9/: day9_1.cpp  day9_2.cpp
src/shared/: shared.h
src/template/: day.cpp.template
